<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ackd151.maintenancemeter.CreateMachine"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp"
    android:focusableInTouchMode="true">

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        app:layout_constraintGuide_percent="0.5"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="180dp" />

    <TextView
        android:id="@+id/window_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/midnightBlue"
        android:gravity="center"
        android:text="@string/new_machine"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/background_light"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/year_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manuf_year"
        android:textSize="18sp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/window_title" />

    <Spinner
        android:id="@+id/spinner_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/window_title" />

    <TextView
        android:id="@+id/make_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/make"
        android:textSize="18sp"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/year_prompt" />

    <Spinner
        android:id="@+id/spinner_make"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/spinner_year" />

    <TextView
        android:id="@+id/model_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/model"
        android:textSize="18sp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/make_prompt" />

    <Spinner
        android:id="@+id/spinner_model"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/spinner_make"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/hours_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_hours"
        android:textSize="18sp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/model_prompt" />

    <EditText
        android:id="@+id/hours_entry"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:ems="5"
        android:hint="@string/current_hours_hint"
        android:inputType="numberDecimal"
        app:layout_constraintBaseline_toBaselineOf="@+id/hours_prompt"
        app:layout_constraintLeft_toLeftOf="@+id/guideline" />

    <Button
        android:id="@+id/finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:background="@color/checkBox"
        android:onClick="createBikeProfile"
        android:text="@string/create_machine_profile"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_end" />

    <TextView
        android:id="@+id/intervals"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/midnightBlue"
        android:gravity="center"
        android:text="@string/intialize_intervals"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hours_entry" />

    <TextView
        android:id="@+id/engine_oil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/engine_oil"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/intervals"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/oil_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/oil_filter"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/engine_oil"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/fork_oil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/fork_oil"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/oil_filter"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/shock_oil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/shock_oil"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/fork_oil"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/valves"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/valves"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/shock_oil"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/top_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/top_end"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/valves"
        android:layout_marginEnd="8dp" />

    <EditText
        android:id="@+id/eng_oil_number"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:maxLength="4"
        app:layout_constraintBaseline_toBaselineOf="@+id/engine_oil"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        android:layout_marginStart="8dp" />

    <EditText
        android:id="@+id/oil_filter_number"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:ems="10"
        android:inputType="number"
        android:maxLength="4"
        app:layout_constraintBaseline_toBaselineOf="@+id/oil_filter"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        android:layout_marginStart="8dp" />

    <EditText
        android:id="@+id/fork_oil_number"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:maxLength="4"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintBaseline_toBaselineOf="@+id/fork_oil"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        android:layout_marginStart="8dp" />

    <EditText
        android:id="@+id/shock_oil_number"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:maxLength="4"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintBaseline_toBaselineOf="@+id/shock_oil"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        android:layout_marginStart="8dp" />

    <EditText
        android:id="@+id/valve_number"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:maxLength="4"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintBaseline_toBaselineOf="@+id/valves"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        android:layout_marginStart="8dp" />

    <EditText
        android:id="@+id/top_end_number"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:maxLength="4"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintBaseline_toBaselineOf="@+id/top_end"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/eng_hrs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="@string/hrs"
        app:layout_constraintBaseline_toBaselineOf="@+id/eng_oil_number"
        app:layout_constraintLeft_toRightOf="@+id/eng_oil_number"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/chg_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chgs"
        app:layout_constraintBaseline_toBaselineOf="@+id/oil_filter_number"
        app:layout_constraintLeft_toRightOf="@+id/oil_filter_number"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/fork_hrs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="@string/hrs"
        app:layout_constraintBaseline_toBaselineOf="@+id/fork_oil_number"
        app:layout_constraintLeft_toRightOf="@+id/fork_oil_number"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/shock_hrs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="@string/hrs"
        app:layout_constraintBaseline_toBaselineOf="@+id/shock_oil_number"
        app:layout_constraintLeft_toRightOf="@+id/shock_oil_number"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/valve_hrs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="@string/hrs"
        app:layout_constraintBaseline_toBaselineOf="@+id/valve_number"
        app:layout_constraintLeft_toRightOf="@+id/valve_number"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/top_end_hrs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="@string/hrs"
        app:layout_constraintBaseline_toBaselineOf="@+id/top_end_number"
        app:layout_constraintLeft_toRightOf="@+id/top_end_number"
        android:layout_marginStart="8dp" />

</android.support.constraint.ConstraintLayout>
